# matrix

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
CUDA/: meson.build  test.c  test.h
benches/: getter_bench.rs
src/: arithmetic.rs  error.rs  lib.rs  matrix.rs  parse.rs  test.rs  utils.rs
src/heap/: matrix.rs  mod.rs  utils.rs
src/matrix/: error.rs  methods.rs  traits.rs
src/stack/: arithmetic.rs  heap_ops.rs  matrix.rs  mod.rs  utils.rs
tests/: 3d_array.rs  add.rs  c.rs  column_vec.rs  construct.rs  correct_args.rs  correct_output.rs  diff_len_arrs.rs  heap_stack.rs  indexing.rs  multiplication.rs  ops.rs  try_from.rs  trybuild.rs
tests/trybuild/: add_incompatible.rs  add_incompatible.stderr  diff_len_array.rs  diff_len_array.stderr  multi_dim_array.rs  multi_dim_array.stderr  valid.rs
