[package]
name = "matrix"
version = "0.1.0"
authors = ["Oliver <oliver@archer.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", optional = true }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[features]
heap = []
rand = ["dep:rand"]
